# UW

./: README.md
ASD/: Readme.md
ASD/baz/: baz.cpp
ASD/drz/: Readme.txt  drz.cpp
ASD/est/: est.cpp
ASD/jaz/: jaz.cpp
ASD/kap/: kap.cpp
ASD/kin/: kin.cpp
ASD/kre/: kre.cpp
ASD/mal/: mal.cpp
ASD/man/: man.cpp
ASD/mat/: mat.cpp
ASD/mec/: mec.cpp
ASD/par/: par.cpp
ASD/par'/: par.cpp
ASD/per/: per.cpp
ASD/pod/: pod.cpp
ASD/prj/: prj.cpp
ASD/raz/: raz.cpp
ASD/rel/: rel.cpp
ASD/sor/: sor.cpp
ASD/sum/: sum.cpp
ASD/tan/: tan.cpp
IPP/Hospital/: Makefile  hospital.c  parse.c  parse.h  structure.c  structure.h  test.sh
IPP/MiddleAges/: CMakeLists.txt  Readme.md  game.sh  test.sh
IPP/MiddleAges/src/: ai.c  ai.h  engine.c  engine.h  middle_ages.c  middle_ages_tests.c  parse.c  parse.h  structure.c  structure.h  utils.h
PO/Hotel/src/hotel/: Ankieta.java  Hotel.java  Kierunek.java  Klient.java  Kolorystyka.java  Pokój.java  PrzedziałCzasowy.java  Recepcjonista.java  Styl.java  Zamówienie.java
PO/Hotel/src/klienci/: Budżetowy.java  Perfekcjonista.java  Połowiczny.java  Ugodowy.java  Widokowy.java
PO/Hotel/src/recepcjoniści/: Aproksymacyjny.java  Losowy.java  Perfekcjonista.java  Złośliwy.java
PO/POForum/: .classpath  easteregg.xml
PO/POForum/src/main/java/jfxtras/styles/jmetro8/: Utils.java
PO/POForum/src/main/java/pl/edu/mimuw/forum/ui/controllers/: ApplicationController.java  ContentPaneController.java  DetailsPaneController.java  MainPaneController.java  SuggestionPaneController.java
PO/POForum/src/main/java/pl/edu/mimuw/forum/ui/models/: SuggestionViewModel.java
PO/POForum/src/main/java/pl/edu/mimuw/forum/undoredo/: Action.java  DoubleStack.java  ICommand.java  LambdaCommand.java  UndoRedoData.java
WPF/: arytmetyka.ml  iSet.ml  origami.ml  przelewanka.ml  topol.ml
